--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="fill" id="fill"></div>
     </div>
 
-    <div class="percentage" id="percent">...</div>
+    <div class="percentage" id="postotak">...</div>
   </div>
 
   <script>
@@ -100,6 +100,7 @@
 </body>
 
 </html>
+
 
 
 
