--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     <div class="metrics">
       <span>🎯 Cilj: <strong id="cilj">...</strong></span>
       <span>💰 Ostvareno: <strong id="ostvareno">...</strong></span>
-      <span>⚠️ Reklamacije: <strong id="reklamacije">...</strong></span> 
+      <span>⚠️ Reklamacije: <strong id="reklamacije">...</strong></span>
+      <span>📈 Neto zarada: <strong id="zarada">...</strong></span>
     </div>
 
     <div class="bowl">
@@ -100,6 +101,7 @@
 </body>
 
 </html>
+
 
 
 
