--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="fill" id="fill"></div>
     </div>
 
-    <div class="percentage" id="postotak">...</div>
+    <div class="percentage" id="percent">...</div>
   </div>
 
   <script>
@@ -101,6 +101,7 @@
 </body>
 
 </html>
+
 
 
 
