--- a/index.html
+++ b/index.html
@@ -95,11 +95,12 @@
     }
 
     ucitajPodatke();
-    setInterval(ucitajPodatke, 1 * 60 * 1000);
+   // setInterval(ucitajPodatke, 1 * 60 * 1000);
   </script>
 </body>
 
 </html>
+
 
 
 
