--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@
     }
 
     ucitajPodatke();
-   // setInterval(ucitajPodatke, 1 * 60 * 1000);
+    setInterval(ucitajPodatke, 10 * 60 * 1000);
   </script>
 </body>
 
 </html>
+
 
 
 
