--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   </style>
 </head>
 <body>
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUzQNVeBbbWkDTosCqZezmOTVAfRMhYrcBsQ&s" alt="Logo firme" id="logo" style="width:150px; display:block; margin-bottom:20px;">
   <div class="container">
     <div class="metrics">
       <span>🎯 Cilj: <strong id="cilj">...</strong></span>
@@ -98,6 +99,7 @@
 </body>
 
 </html>
+
 
 
 
